# roland-dsps

./: .gitignore  README.md  internals.md  known_working.txt  opcode_types.md
.github/workflows/: main.yml
csp/: CSP.md  README.md  emu_test.py  format.numbers
csp/algos/: combined.txt  sde_8tap3ddelay.txt  sde_duck3ddelay.txt  sde_duckdelay.txt  sde_mono3dnlr.txt  sde_mononlr.txt  sde_precisiondly.txt  sde_ps3ddelay.txt  sde_quad3ddelay.txt  sde_quaddelay.txt  sde_rvrs3ddelay.txt  sde_rvrsdelay.txt  sde_simple3ddelay.txt  sde_simpledelay.txt  sde_stereo3ddelay.txt  sde_stereo3dnlr.txt  sde_stereodelay.txt  se70_20tapdelay.txt  se70_2chmixer.txt  se70_ambience.txt  se70_bandchorus.txt  se70_bassmulti.txt  se70_basssynth.txt  se70_gatereverb.txt  se70_gtmulti1.txt  se70_gtmulti2.txt  se70_gtmulti3.txt  se70_gtmulti4.txt  se70_guitarsynth.txt  (+38 more)
emulator/: auto3d_perftest.txt  chorus_perftest.txt  codegen.h  compiled.cpp  emulator.cpp  emulator.h  main.cpp  perf_test.cpp  reverb_perftest.txt  run_perftest.sh  run_test.sh  runtime.h  test.cpp  wavutils.cpp  wavutils.h
esp/: README.md
lsp/: all_opcodes.txt
lsp_pgm/: 2pitchshifter.txt  3d_manual.txt  3tap_delay.txt  4tap_delay.txt  auto_wah.txt  compressor.txt  distortion.txt  enhancer.txt  fp_pitchshifter.txt  hexa_chorus.txt  lofi_2.txt  lsp.txt  mod_delay.txt  od,chorus.txt  overdrive.txt  phaser.txt  reverb.txt  space_d.txt  stereo_chorus.txt  stereo_delay.txt  stereo_eq.txt  stereo_flanger.txt  thru.txt  tremolo.txt  tremolo_chorus.txt
pico/: CMakeLists.txt  main.cpp
tools/: collate.py  send_to_interface.py
(+48 files in other folders)
